--- a/package.json
+++ b/package.json
@@ -24,11 +24,16 @@
     "next": "13.4.0",
     "postcss": "8.4.23",
     "react": "18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
     "react-spinners": "^0.13.8",
     "swiper": "^9.3.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
     "zustand": "^4.3.8"
+  },
+  "devDependencies": {
+    "@types/react-copy-to-clipboard": "^5.0.4"
   }
 }
